Fix for table header collapse

--- a/codebrag-ui/app/styles/popups.styl
+++ b/codebrag-ui/app/styles/popups.styl
@@ -211,6 +211,10 @@
     & th
       color: $second-body-text-color;
       font-weight: normal;
+      min-width: 9.6em;
+
+      & div
+        min-height: 1px;
 
     & .cell-centered
       text-align: center;
